--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Auto-Tuning Website Template | 404 :: </title>
+<title>The Auto-Tuning Website Template | Contact :: </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
@@ -34,22 +34,31 @@
     </div>
   </div>
   <div class="main">
+	  
     <div class="main1">
-      <form class="form-4">
-        <h1>Login or Register</h1>
-        <p>
-          <label for="login">Username or email</label>
-          <input type="text" name="login" placeholder="Username or email" required>
-        </p>
-        <p>
-          <label for="password">Password</label>
-          <input type="password" name='password' placeholder="Password" required>
-        </p>
-        <p>
-          <input type="submit" name="submit" value="Continue">
-        </p>
-      </form>
-​​       </div>
+      <div class="section group1">
+        <div class="col span_1_of_3">
+          <div class="contact_info">
+			 <img src="images/features.jpg" alt="image1" />
+		</div>
+          <div class="company_address">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam iusto, natus est ducimus saepe laborum</p>
+		  		<br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam iusto, natus est ducimus saepe laborum</p>
+		  
+		  </div>
+        </div>
+        <div class="company_address">
+			
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam iusto, natus est ducimus saepe laborum Lorem ipsum dolor sit amet.</p>
+			<br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa sit, numquam amet voluptatibus obcaecati ea maiores totam nostrum, ad iure rerum quas harum ipsum.  lobcaecati ea maiores totam nostrum, ad iure rerum quas harum ipsum. Rem ea ducimus quos quae quo.</p>
+	
+			<br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam iusto, natus est ducimus saepe laborum Lorem ipsum dolor sit amet.</p>
+			<br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa sit, numquam amet voluptatibus obcaecati ea maiores totam nostrum, ad iure rerum quas harum ipsum.  lobcaecati ea maiores totam nostrum, ad iure rerum quas harum ipsum. Rem ea ducimus quos quae quo.</p>
+			
+		</div>
+        <div class="clear"></div>
+      </div>
+    </div>
   </div>
   <div class="footer">
     <div class="f_left">
