--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 				<div class="clear"></div>
 				<div class="copyrights">Collect from <a href="http://www.cssmoban.com/">免费模板</a></div>
 				<div class="h_main">
-					<ul class="nav">
+					<ul class="nav" width="900px" height="100px">
 						<li class="active"><a href="index.html">首页</a></li>
 						<li><a href="maintain.html">维护</a></li>
 						<li><a href="repair.html">维修</a></li>
 						<li><a href="contact.html">联系</a></li>
+						<li><a href="about.html">关于我们</a></li>
+						<li><a href="term.html">我们团队</a></li>
 					</ul>
 					<div class="search">
 						<form>
@@ -40,7 +42,7 @@
 							<input type="submit" value="">
 						</form>
 					</div>
-					<div class="clear"></div>
+					<div class="clear"></div>					
 				</div>
 			</div>
 			<div class="container">
