--- a/BentianDetails.html
+++ b/BentianDetails.html
@@ -42,6 +42,8 @@
 						<li><a href="maintain.html">维护</a></li>
 						<li><a href="repair.html">维修</a></li>
 						<li><a href="contact.html">联系</a></li>
+						<li><a href="about.html">关于我们</a></li>
+						<li><a href="term.html">我们团队</a></li>
 					</ul>
 					<div class="search">
 						<form>
