添加宝骏和凯迪拉克Tx6页面的不同

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-		<!--slider-->
+				<!--slider-->
 		<script type="text/javascript" src="js/modernizr.custom.53451.js"></script>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.gallery.js"></script>
@@ -58,11 +58,11 @@
 			</div>
 			<div class="main">
 				<div class="section group">
-					<div class="grid_1_of_4 images_1_of_4"> <a href="KadiLakeDetails.html"><img src="images/kaidilakeXT6.jpg"></a> <a
-						 href="KadiLakeDetails.html">
+					<div class="grid_1_of_4 images_1_of_4"> <a href="KadiLakeSingle.html"><img src="images/kaidilakeXT6.jpg"></a> <a
+						 href="KadiLakeSingle.html">
 							<h3>凯迪拉克ＸＴ６</h3>
 						</a> </div>
-					<div class="grid_1_of_4 images_1_of_4"> <a href="Wulinghongguagndetails.html"><img src="images/baojun530.png"></a> <a href="Wulinghongguagndetails.html">
+					<div class="grid_1_of_4 images_1_of_4"> <a href="baojunsingle.html"><img src="images/baojun530.png"></a> <a href="baojunsingle.html">
 							<h3>宝骏530 </h3>
 						</a> </div>
 					<div class="grid_1_of_4 images_1_of_4"> <a href="BentianDetails.html"><img src="images/bentian.png"></a> <a href="BentianDetails.html">
@@ -100,10 +100,8 @@
 							<li><a href="">联系我们</a></li>
 						</ul>
 					</div>
-					<div class="copy">
-						<p class="w3-link">© All Rights Reserved | More Templates <a href="#" target="_blank" title="汽车展示">汽车展示</a> -
-							Collect from <a href="#" title="汽车展示" target="_blank">汽车展示</a> </p>
-					</div>
+					
+					
 				</div>
 				<div class="social-icons">
 					<ul>
