--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<a href="details.html"><img src="img/aodiA3.jpg" alt="image1" /></a> 
 					<a href="BenChidetails.html"><img src="images/benchiAji.jpg" alt="image2" /></a> 
 					<a href="details(2).html"><img src="images/3.jpg" alt="image3" /></a>
-					<a href="mumarenDetails.html"><img src="images/mmr.jpg" alt="image4" /></a>
+					<a href="MuMaRensingle.html"><img src="images/mmr.jpg" alt="image4" /></a>
 					<a href="puladuoDetails.html"><img src="images/pld_b.jpg" alt="image5" /></a>
 					<a href="pajieruoDetails.html"><img src="images/pjl.jpg" alt="image1" /></a> 
 					<!-- <a href="details(2).html"><img src="images/7.jpg" alt="image2" /></a> -->
@@ -68,7 +68,7 @@
 					<div class="grid_1_of_4 images_1_of_4"> <a href="BentianDetails.html"><img src="images/bentian.png"></a> <a href="BentianDetails.html">
 							<h3>本田</h3>
 						</a> </div>
-					<div class="grid_1_of_4 images_1_of_4"> <a href="mumarenDetails.html"><img src="images/mmr.jpg"></a> <a href="mumarenDetails.html">
+					<div class="grid_1_of_4 images_1_of_4"> <a href="MuMaRensingle.html"><img src="images/mmr.jpg"></a> <a href="MuMaRensingle.html">
 							<h3>牧马人 </h3>
 						</a> </div>
 					<div class="clear"></div>
