丰田帕杰罗详情页面提交

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="clear"></div>
 				</div>
 				<div class="section group btm">
-					<div class="grid_1_of_4 images_1_of_4"> <a href="puladuoDetails.html"><img src="images/pld_b.jpg"></a> <a href="puladuoDetails.html">
+					<div class="grid_1_of_4 images_1_of_4"> <a href="fengtianpuladuoDetails.html"><img src="images/pld_b.jpg"></a> <a href="fengtianpuladuoDetails.html">
 							<h3>丰田普拉多 </h3>
 						</a> </div>
 					<div class="grid_1_of_4 images_1_of_4"> <a href="pajieruoDetails.html"><img src="images/pjl.jpg"></a> <a href="pajieruoDetails.html">
